# NotepadAnimator

./: CMakeLists.txt  DirectoryHelper.cpp  DirectoryHelper.hpp  FfmpegHelper.cpp  FfmpegHelper.hpp  FrameConverter.cpp  FrameConverter.hpp  MainWindowFinder.hpp  NotepadController.cpp  NotepadController.hpp  README.md  StringHelper.hpp  main.cpp
.github/workflows/: msbuild.yml
